--- a/LightGCN_git.ipynb
+++ b/LightGCN_git.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNihZn1WbbyPWf/bP6cUyDI",
+      "authorship_tag": "ABX9TyP5yojwM0qSQP1dLqINcxzn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,10 +134,78 @@
     {
       "cell_type": "code",
       "source": [
-        "!python /content/LightGCN-PyTorch/code/main.py --decay=1e-4 --lr=0.001 --layer=3 --seed=2020 --dataset=\"gowalla\" --topks=\"[20]\" --recdim=64"
+        "!python /content/LightGCN/our_imp/LightGCN-PyTorch/code/main.py --decay=1e-4 --lr=0.001 --layer=3 --seed=2020 --dataset=\"gowalla\" --topks=\"[20]\" --recdim=64"
       ],
       "metadata": {
-        "id": "_vEmEqpztZ4O"
+        "id": "_vEmEqpztZ4O",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "598197e6-f33b-491e-d380-735e6ee0bf76"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0;30;43mCpp extension not loaded\u001b[0m\n",
+            ">>SEED: 2020\n",
+            "\u001b[0;30;43mloading [../data/gowalla]\u001b[0m\n",
+            "810128 interactions for training\n",
+            "217242 interactions for testing\n",
+            "gowalla Sparsity : 0.0008396216228570436\n",
+            "gowalla is ready to go\n",
+            "===========config================\n",
+            "{'A_n_fold': 100,\n",
+            " 'A_split': False,\n",
+            " 'bigdata': False,\n",
+            " 'bpr_batch_size': 2048,\n",
+            " 'decay': 0.0001,\n",
+            " 'dropout': 0,\n",
+            " 'keep_prob': 0.6,\n",
+            " 'latent_dim_rec': 64,\n",
+            " 'lightGCN_n_layers': 3,\n",
+            " 'lr': 0.001,\n",
+            " 'multicore': 0,\n",
+            " 'pretrain': 0,\n",
+            " 'test_u_batch_size': 100}\n",
+            "cores for test: 1\n",
+            "comment: lgn\n",
+            "tensorboard: True\n",
+            "LOAD: 0\n",
+            "Weight path: ./checkpoints\n",
+            "Test Topks: [20]\n",
+            "using bpr loss\n",
+            "===========end===================\n",
+            "\u001b[0;30;43muse NORMAL distribution initilizer\u001b[0m\n",
+            "loading adjacency matrix\n",
+            "successfully loaded...\n",
+            "/content/LightGCN/our_imp/LightGCN-PyTorch/code/dataloader.py:330: UserWarning: torch.sparse.SparseTensor(indices, values, shape, *, device=) is deprecated.  Please use torch.sparse_coo_tensor(indices, values, shape, dtype=, device=). (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:618.)\n",
+            "  return torch.sparse.FloatTensor(index, data, torch.Size(coo.shape))\n",
+            "don't split the matrix\n",
+            "lgn is already to go(dropout:0)\n",
+            "load and save to /content/LightGCN/our_imp/LightGCN-PyTorch/code/checkpoints/lgn-gowalla-3-64.pth.tar\n",
+            "\u001b[0;30;43m[TEST]\u001b[0m\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/LightGCN/our_imp/LightGCN-PyTorch/code/main.py\", line 45, in <module>\n",
+            "    Procedure.Test(dataset, Recmodel, epoch, w, world.config['multicore'])\n",
+            "  File \"/content/LightGCN/our_imp/LightGCN-PyTorch/code/Procedure.py\", line 106, in Test\n",
+            "    rating = Recmodel.getUsersRating(batch_users_gpu)\n",
+            "  File \"/content/LightGCN/our_imp/LightGCN-PyTorch/code/model.py\", line 175, in getUsersRating\n",
+            "    all_users, all_items = self.computer()\n",
+            "  File \"/content/LightGCN/our_imp/LightGCN-PyTorch/code/model.py\", line 166, in computer\n",
+            "    all_emb = torch.sparse.mm(g_droped, all_emb)\n",
+            "KeyboardInterrupt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vLxHSZtXqor_"
       },
       "execution_count": null,
       "outputs": []
